--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <p style="font-size:1.5vw; text-align: center;">(updated every 15 minutes)</p>
     <br/>
     <div style="max-width: 1200px; margin: auto">
-        <a class="twitter-timeline" href="https://twitter.com/alkalinedd?ref_src=twsrc%5Etfw">Tweets
+        <a class="twitter-timeline" href="https://twitter.com/TeamInk95?ref_src=twsrc%5Etfw">Tweets
             by alkalinedd</a>
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
