longer update time

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <br/>
     <div style="max-width: 1200px; margin: auto">
         <a class="twitter-timeline" href="https://twitter.com/TeamInk95?ref_src=twsrc%5Etfw">Tweets
-            by alkalinedd</a>
+            by TeamInk95</a>
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 </body>
